# CoupledCats

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  justfile  shell.nix
.notes/: plan.md
examples/: bevy-tonic-client.rs  tonic-server.rs
proto/: hello.proto  local.proto  matchmaker.proto  p2p.proto  peer.proto
src/: animate.rs  cat.rs  lib.rs  main.rs  sprite_sheet.rs
src/bevy/: mod.rs
src/bridge/: clientlink.rs  game_bridge.rs  local_bridge.rs  mod.rs  serverlink.rs
src/client/: client.rs
src/daemon/: daemon.rs  mod.rs  peer.rs
src/daemon/server/: local.rs  mod.rs  p2p.rs  peer.rs
src/game/: animate.rs  app.rs  cat.rs  mod.rs  movement.rs  state.rs  texture.rs
src/game/systems/: animate.rs  mod.rs  movement.rs  state.rs  texture.rs
src/game/systems/network/: heartbeat.rs  mod.rs
src/utils/: bridge.rs  log.rs  meow.rs
