[package]
name = "coupled-cats"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "CoupledCats"
path = "src/bin/coupled_cats/main.rs"

[[bin]]
name = "MatchMaker"
path = "src/bin/match_maker/main.rs"

[dependencies]
bevy = "0.14.1"
display-info = "0.5.1"

# grpc
prost = "0.13"
tokio = { version = "1.0", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
tokio-stream = "0.1"
async-stream = "0.2"

serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0"

# for nice errors
color-eyre = "0.6"

[build-dependencies]
tonic-build = "0.12"
